# oisp-sensor

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  LINUX_STATUS.md  PRODUCTION.md  README.md  SECURITY.md  TODO.md  config.example.toml  docker-compose.yml  install-universal.sh  install.sh
.cursor/rules/: project.mdc  rust.mdc
.githooks/: pre-commit
.github/workflows/: ci.yml  docker.yml  docs.yml  release.yml
bpf/: Makefile  process_monitor.bpf.c  ssl_monitor.bpf.c
crates/oisp-capture/: Cargo.toml
crates/oisp-capture-ebpf/: Cargo.toml  build.rs
crates/oisp-capture-ebpf/src/: ebpf_capture.rs  file.rs  lib.rs  linux_proc.rs  loader.rs  network.rs  process.rs  ssl.rs  sslsniff_runner.rs  types.rs
crates/oisp-capture-macos/: Cargo.toml
crates/oisp-capture-macos/src/: lib.rs  socket_server.rs
crates/oisp-capture-windows/: Cargo.toml
crates/oisp-capture-windows/src/: lib.rs  pipe_server.rs
crates/oisp-capture/src/: filter.rs  lib.rs  test_generator.rs
crates/oisp-core/: Cargo.toml
crates/oisp-core/data/: oisp-spec-bundle.json
crates/oisp-core/src/: app_registry.rs  config.rs  lib.rs  metrics.rs  pipeline.rs  plugins.rs  providers.rs  redaction.rs  replay.rs  spec.rs  trace.rs
crates/oisp-core/src/actions/: mod.rs  redaction.rs
crates/oisp-core/src/enrichers/: app.rs  host.rs  mod.rs  process_tree.rs
crates/oisp-core/src/events/: agent.rs  ai.rs  envelope.rs  file.rs  mod.rs  network.rs  process.rs
crates/oisp-core/src/policy/: actions.rs  audit.rs  condition.rs  evaluator.rs  manager.rs  mod.rs  parser.rs  plugin.rs
crates/oisp-correlate/: Cargo.toml
crates/oisp-correlate/src/: lib.rs
crates/oisp-decode/: Cargo.toml
crates/oisp-decode/src/: ai.rs  decoder.rs  http.rs  lib.rs  spec_parser.rs  sse.rs  system.rs
crates/oisp-enrich/: Cargo.toml
crates/oisp-enrich/src/: host.rs  lib.rs  process_tree.rs
crates/oisp-export/: Cargo.toml
crates/oisp-export/src/: jsonl.rs  kafka.rs  lib.rs  otlp.rs  webhook.rs  websocket.rs
crates/oisp-oximy/: Cargo.toml
crates/oisp-oximy/src/: config.rs  error.rs  exporter.rs  heartbeat.rs  lib.rs  offline_queue.rs  policy_sync.rs  types.rs
crates/oisp-oximy/src/client/: http.rs  mod.rs
crates/oisp-oximy/src/enrollment/: credentials.rs  mod.rs
crates/oisp-redact/: Cargo.toml
crates/oisp-redact/src/: lib.rs
crates/oisp-redirector/: Cargo.toml  build.rs
crates/oisp-redirector/src/: main.rs
crates/oisp-redirector/src/windows_main/: ai_filter.rs  connection.rs  ipc.rs  mod.rs  packet_rewrite.rs  proxy.rs  tls_mitm.rs  windivert_capture.rs
crates/oisp-sensor/: Cargo.toml
crates/oisp-sensor/src/: main.rs
crates/oisp-tui/: Cargo.toml
crates/oisp-tui/src/: app.rs  event_handler.rs  lib.rs  ui.rs
crates/oisp-web/: Cargo.toml
crates/oisp-web/src/: api.rs  lib.rs  web_event.rs  ws.rs
crates/oisp-web/static/: index.html  timeline.html
docker/: Dockerfile.multiarch  docker-compose.yml
docs/: CNAME  WINDOWS_IMPLEMENTATION_PLAN.md  WINDOWS_SESSION_LOG.md  docs.json  index.html  install.sh
docs-site/: .gitignore  astro.config.mjs  package-lock.json  package.json
docs-site/src/components/: Head.astro
docs-site/src/styles/: custom.css
docs/architecture/: EBPF_ARCHITECTURE.md  IMPLEMENTATION_PHASES.md  app-identification.mdx  ebpf.mdx  events.mdx  overview.mdx
docs/configuration/: config-file.mdx  exports.mdx  filters.mdx  policies.mdx  redaction.mdx
docs/cookbooks/: overview.mdx
docs/cookbooks/edge-cases/: pyenv-python.mdx
docs/cookbooks/kubernetes/: daemonset.mdx
docs/cookbooks/python/: fastapi-service.mdx  litellm.mdx  openai-simple.mdx
docs/cookbooks/self-hosted/: n8n.mdx
docs/getting-started/: installation.mdx  introduction.mdx  quick-start.mdx  what-works-today.mdx
docs/guides/: ci-cd.mdx  contributing.mdx  multi-node.mdx  oximy-cloud.mdx  troubleshooting.mdx
docs/reference/: api.mdx  events.mdx  oisp-spec.mdx
ebpf/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
ebpf/oisp-ebpf-capture/: Cargo.toml  build.rs
ebpf/oisp-ebpf-capture-common/: Cargo.toml
ebpf/oisp-ebpf-capture-common/src/: lib.rs
ebpf/oisp-ebpf-capture-ebpf/: Cargo.toml
ebpf/oisp-ebpf-capture-ebpf/src/: main.rs
ebpf/oisp-ebpf-capture/src/: main.rs
ebpf/tests/: run_all_tests.sh  test_ai_providers.sh  test_basic.sh  test_multiprocess.js  test_multiprocess.py
fixtures/: README.md
frontend/: .gitignore  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: DashboardView.tsx  EmptyState.tsx  EventBlock.tsx  Header.tsx  InventoryView.tsx  LogView.tsx  MetricsView.tsx  Navigation.tsx  ProcessNode.tsx  ProcessTreeView.tsx  SettingsView.tsx  Sidebar.tsx  TimelineView.tsx  TopBar.tsx  TracesView.tsx  index.ts
frontend/src/lib/: useEvents.ts  useInventory.ts  useProcessMetrics.ts  useStats.ts  useTraces.ts
frontend/src/types/: event.ts
frontend/src/utils/: eventParsers.ts
macos/: INSTALLATION.md  Package.swift  README.md  SESSION_LOG.md  TROUBLESHOOTING.md  project.yml
macos/OISP.xcodeproj/: project.pbxproj
macos/OISPApp/: Info.plist  OISP.entitlements
macos/OISPApp/Resources/: oisp-spec-bundle.json
macos/OISPCore/: Info.plist
macos/OISPNetworkExtension/: Info.plist  NetworkExtension.entitlements  TLSInterceptor.swift  TransparentProxyProvider.swift  main.swift
macos/Scripts/: build-release.sh  create-dmg.sh  notarize.sh
packaging/: build-deb.sh
packaging/rpm/: build-rpm.sh  oisp-sensor.spec
packaging/systemd/: oisp-sensor.service
scripts/: build-all.sh  demo.sh  docker-build.sh  docker-run.sh  mitmproxy-bridge.py  setup-hooks.sh  test-linux.sh
windows/: README.md
windows/OISPApp/: App.xaml  App.xaml.cs  OISPApp.csproj  README.md  Settings.cs  SettingsWindow.xaml  SettingsWindow.xaml.cs  app.manifest
windows/Scripts/: build-app.ps1  build-release.ps1  generate-icons.ps1  setup-dev.ps1  test-capture.ps1
windows/installer/: README.md  build-installer.ps1  oisp-sensor.nsi
(+56 files in other folders)
