[workspace]
resolver = "2"
members = [
    "crates/oisp-sensor",
    "crates/oisp-core",
    "crates/oisp-capture",
    "crates/oisp-capture-ebpf",
    "crates/oisp-capture-macos",
    "crates/oisp-capture-windows",
    "crates/oisp-decode",
    "crates/oisp-enrich",
    "crates/oisp-redact",
    "crates/oisp-export",
    "crates/oisp-correlate",
    "crates/oisp-tui",
    "crates/oisp-web",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/oximyHQ/oisp-sensor"
authors = ["Oximy <team@oximy.com>"]
rust-version = "1.83"

[workspace.dependencies]
# Core
tokio = { version = "1.42", features = ["full"] }
async-trait = "0.1"
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Hostname
hostname = "0.4"

# IDs
ulid = "1.1"
uuid = { version = "1.11", features = ["v4", "serde"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# HTTP parsing
httparse = "1.9"
http = "1.2"

# Networking
tokio-tungstenite = "0.24"
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Hashing
sha2 = "0.10"
hex = "0.4"

# Regex for pattern matching
regex = "1.11"

# Config
toml = "0.8"
directories = "5.0"

# Internal crates
oisp-core = { path = "crates/oisp-core" }
oisp-capture = { path = "crates/oisp-capture" }
oisp-capture-ebpf = { path = "crates/oisp-capture-ebpf" }
oisp-capture-macos = { path = "crates/oisp-capture-macos" }
oisp-capture-windows = { path = "crates/oisp-capture-windows" }
oisp-decode = { path = "crates/oisp-decode" }
oisp-enrich = { path = "crates/oisp-enrich" }
oisp-redact = { path = "crates/oisp-redact" }
oisp-export = { path = "crates/oisp-export" }
oisp-correlate = { path = "crates/oisp-correlate" }
oisp-tui = { path = "crates/oisp-tui" }
oisp-web = { path = "crates/oisp-web" }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
# Faster builds for development
opt-level = 0
debug = true

