[package]
name = "oisp-capture-ebpf"
version.workspace = true
edition = "2021"
license.workspace = true
description = "Linux eBPF capture for OISP Sensor"

[target.'cfg(target_os = "linux")'.dependencies]
libbpf-rs = "0.24"
libbpf-sys = "1.4"
libc = "0.2"
nix = { version = "0.29", features = ["user", "process"] }
object = "0.36"
goblin = "0.9"

[dependencies]
oisp-core = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

[target.'cfg(target_os = "linux")'.build-dependencies]
libbpf-cargo = "0.24"

[features]
default = []

