[package]
name = "oisp-capture-ebpf"
version.workspace = true
edition = "2021"
license.workspace = true
description = "Linux eBPF capture for OISP Sensor"

[target.'cfg(target_os = "linux")'.dependencies]
# eBPF loading and interaction via Aya (use git version for latest API)
aya = { git = "https://github.com/aya-rs/aya" }
libc = "0.2"
nix = { version = "0.29", features = ["user", "process"] }

[dependencies]
oisp-core = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
ulid = { workspace = true }

[features]
default = []
# Enable eBPF capture (requires pre-built eBPF bytecode)
ebpf = []

