[package]
name = "oisp-capture-ebpf"
version.workspace = true
edition = "2021"
license.workspace = true
description = "Linux eBPF capture for OISP Sensor using libbpf-based sslsniff"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[dependencies]
oisp-core = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
ulid = { workspace = true }

[features]
default = []
# Enable embedded sslsniff binary (set by build.rs when sslsniff is found)
embedded_sslsniff = []
