[package]
name = "oisp-capture-windows"
version.workspace = true
edition = "2021"
license.workspace = true
description = "Windows capture for OISP Sensor (ETW)"

[dependencies]
oisp-core = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Etw",
    "Win32_Security",
]}

