[package]
name = "oisp-correlate"
version.workspace = true
edition = "2021"
license.workspace = true
description = "Event correlation and trace building for OISP Sensor"

[dependencies]
oisp-core = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }

