[package]
name = "oisp-enrich"
version.workspace = true
edition = "2021"
license.workspace = true
description = "Enrichment plugins for OISP Sensor"

[dependencies]
oisp-core = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hostname = "0.4"

