[package]
name = "oisp-tui"
version.workspace = true
edition = "2021"
license.workspace = true
description = "Terminal UI for OISP Sensor"

[dependencies]
oisp-core = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }

