[package]
name = "oisp-web"
version.workspace = true
edition = "2021"
license.workspace = true
description = "Web UI backend for OISP Sensor"

[features]
default = ["embed-frontend"]
embed-frontend = []

[dependencies]
oisp-core = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tokio-tungstenite = { workspace = true }
rust-embed = { workspace = true }
mime_guess = { workspace = true }

